# autocomp

./: .gitignore  ADDING_A_BACKEND.md  ADDING_HARDWARE_SUPPORT.md  CONTRIBUTING.md  LICENSE  PARAMETER_GUIDE.md  README.md  pyproject.toml  run_beam_experiment.py  run_optimize.sh
.github/workflows/: ci.yml
autocomp/agent_builder/: AGENT_BUILDER.md  README.md  __init__.py  assembler.py  builder.py  built_agent.py  feedback.py  ingestor.py  run_agent_builder.py  synthesizer.py
autocomp/agents/: llm_agent.py  llm_ensemble.py
autocomp/backend/: ADDING_A_BACKEND.md  eval_backend.py  gemmini_eval.py  gemmini_setup.md  hardware_backend.py  k230_eval.py  kb_eval.py  kb_setup.md  trn_eval.py  trn_setup.md
autocomp/backend/saturn/rvv_bench/: CMakeLists.txt  prj.conf  riscv_vector.conf
autocomp/backend/saturn/rvv_bench/src/: main.c
autocomp/backend/xnnpack/rvv_bench/: CMakeLists.txt  gtest_zephyr_stubs.h  prj.conf
autocomp/common/: __init__.py  llm_queue.py  llm_utils.py  my_logging.py  utils.py
autocomp/hw_config/: __init__.py  cuda_config.py  gemmini_config.py  hardware_config.py  metal_config.py  saturn_config.py  tapeout_config.py  tpu_config.py  trn_config.py
autocomp/learn/: create_ft_dataset.py  dataset_transformer.py  gpt_oss_(20B)_Fine_tuning.ipynb  rerun_code.py  test_llm_queue.py  train_qwen3.py
autocomp/search/: code_repo.py  evaluator_agent.py  hardware_eval.py  llm_agent.py  llm_ensemble.py  prob.py  run_search.py  search.py
autocomp/visualizer/: ingest.py
autocomp_tests/: test_agent_builder.py
autocomp_tests/integration/: conftest.py  test_early_stop_and_translation.py  test_search_loop.py
examples/: trn_conv1d_opt.py
examples/jaxbench-pallas/: flash_attention_final.py  flash_attention_trace.py  ragged_paged_attention_final.py  ragged_paged_attention_trace.py
examples/jaxbench-priority/: gqa_attention_final.py  gqa_attention_trace.py  mamba2_ssd_final.py  mamba2_ssd_trace.py  mla_attention_final.py  mla_attention_trace.py  retnet_retention_final.py  retnet_retention_trace.py  sparse_moe_final.py  sparse_moe_trace.py
examples/trn-advanced/: 4_conv1d_opt.py
examples/trn-tutorial/: 1_gemm_opt.py  1_gemm_trace.py  2_gemm_opt.py  2_gemm_trace.py  3_mamba_opt.py  3_mamba_trace.py  4_attention_opt.py  4_attention_trace.py  5_sd_attention_opt.py  5_sd_attention_trace.py
harnesses/admm-multifunction/: test0.c  test2.c
harnesses/exo/: test0.c  test1.c  test4.c
harnesses/exo-conv/: test0.c  test1.c  test2.c  test3.c
harnesses/gemm/: test0.c  test3.c  test4.c  test5.c  test6.c  test8.c
harnesses/metal/: 1_matvec_q8_f32.cpp
harnesses/metal-m2/: 0_gemm_q8_f32.cpp
harnesses/rvv-f32/: test0.c
harnesses/tapeout/: 0_matmul_test.py
harnesses/tpu/: test0.py
harnesses/trn-advanced-nki1/: 0_cumsum_test.py  1_transpose_test.py  2_maxpool_test.py  3_rope_test.py  4_conv1d_test.py  5_conv2d_test.py  6_csa_2048_test.py  7_csa_16384.py  8_mha_test.py
harnesses/trn-advanced-nki2/: 0_cumsum_test.py  1_transpose_test.py  2_maxpool_test.py  3_rope_test.py  4_conv1d_test.py  5_conv2d_test.py  6_csa_2048_test.py  7_csa_16384.py  8_mha_test.py
harnesses/trn-e2e/: 0_llama_mlp_prefill.py  10_llama_mlp_decode_b32.py  11_llama_mlp_decode_b32_nki.py  12_llama_logits_b32.py  13_llama_logits_b32_nki.py  2_llama_mlp_decode.py  3_llama_mlp_decode_nki.py  4_llama_attention.py  5_llama_attention_nki.py  6_llama_logits.py  7_llama_logits_nki.py  8_llama_attention_b32.py  9_llama_attention_b32_nki.py  context10.txt  context4.txt  context7.txt  torch_7_baseline.py
harnesses/trn-internal/: 10_openfold3_trimul_test.py  12_flashvsr_fp32attn_test.py  15_gemm_test.py  3_triattn_test.py  4_trimul_test.py  5_fft256_test.py  6_mamba_scan_test.py  7_trotter_test.py  8_deltanet_recurrent_test.py
harnesses/trn-tutorial-nki1/: 0_rmsnorm_test.py  1_layernorm_test.py  2_gemm_test.py  3_mamba_test.py  4_attention_test.py  5_sdattention_test.py
harnesses/trn-tutorial-nki2/: 0_rmsnorm_test.py  1_layernorm_test.py  2_gemm_test.py  3_mamba_test.py  4_attention_test.py  5_sdattention_test.py
harnesses/xnnpack-f32/: test0.c  test1.c  test2.c  test3.c
llm_queue/: README.md  llm_queue_poller.py  llm_queue_writer.py  queue_cli.py  start_vllm_server.py
prompts/: isa_prompt.py  isa_prompt_conv.py
prompts/cuda/: tensor_examples.py
prompts/gemmini/: plan_prompt.py
prompts/opt_system/: gemmini_rules.py  if_example.py  plan_prompt.py  tiling_example.py
prompts/trn/: fusion_example.py  nki_isa_generator.py  nki_isa_orig.txt
sols/: process_kb.py
sols/admm-multifunction/: sol0_opt.c  sol0_unopt.c  sol1_1.c  sol1_opt.c  sol1_opt_hw.c  sol1_unopt_hw.c  sol1_unopt_sw.c  sol2_opt_hw.c  sol2_unopt_hw.c  sol2_unopt_sw.c
sols/exo/: sol0_exo_baseline.c  sol0_exo_opt.c  sol0_gemmini_baseline.c  sol1_exo_baseline.c  sol1_exo_opt.c  sol1_exo_opt_unmodified.c  sol1_gemmini_baseline.c  sol2_exo_baseline.c  sol2_exo_opt.c  sol2_gemmini_baseline.c  sol3_exo_baseline.c  sol3_exo_opt.c  sol4_exo_baseline.c  sol4_exo_opt.c  sol5_exo_baseline.c  sol5_exo_opt.c
sols/exo-conv/: sol0_exo_baseline.c  sol0_exo_opt.c  sol0_gemmini_baseline.c  sol1_exo_baseline.c  sol1_exo_opt.c  sol1_gemmini_baseline.c  sol2_exo_baseline.c  sol2_exo_opt.c  sol2_gemmini_baseline.c  sol3_exo_baseline.c
sols/f32/: 1_raddstoreexpminusmax.c
sols/gemm/: sol0_exo_baseline.c  sol0_gemmini_baseline.c  sol1_exo_baseline.c  sol2_exo_baseline.c  sol3_exo_baseline.c  sol4_exo_baseline.c  sol5_exo_baseline.c  sol6_exo_baseline.c  sol7_exo_baseline.c  sol8_exo_baseline.c
sols/kb-level1/: 100_HingeLoss.py  10_3D_tensor_matrix_multiplication.py  11_4D_tensor_matrix_multiplication.py  12_Matmul_with_diagonal_matrices_.py  13_Matmul_for_symmetric_matrices.py  14_Matmul_for_upper_triangular_matrices.py  15_Matmul_for_lower_triangular_matrices.py  16_Matmul_with_transposed_A.py  17_Matmul_with_transposed_B.py  18_Matmul_with_transposed_both.py  19_ReLU.py  20_LeakyReLU.py  21_Sigmoid.py  (+87 more)
visualizer/: .vscodeignore  LICENSE  README.md  ingest.py  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+723 files in other folders)
